--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,8 @@ phases:
   install:
     commands: 
       - echo installing NGINX
-      - sudo apt-get update
-      - sudo apt-get install nginx -y
+      - sudo apt update -y
+      - sudo apt install nginx -y
   build:
     commands:
       - echo Build started on `date`
