--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,10 @@
 version: 0.2
-
 phases:
   install:
     commands: 
       - echo installing NGINX
-      - sudo apt update -y
-      - sudo apt install nginx -y
+      - sudo apt-get update -y
+      - sudo apt-get install nginx -y
   build:
     commands:
       - echo Build started on `date`
