total code change

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,20 @@
 version: 0.2
+
 phases:
   install:
-    commands: 
+    commands:
       - echo installing NGINX
       - sudo yum update -y
-      - sudo yum install nginx -y
+      - sudo amazon-linux-extras enable nginx1
+      - sudo yum install -y nginx
   build:
     commands:
       - echo Build started on `date`
-      - cp index.html /var/www/html/
+      - sudo cp index.html /usr/share/nginx/html/
   post_build:
     commands:
       - echo Configuring NGINX
-      
+
 artifacts:
   files:
-    - /var/www/html/index.html
+    - index.html
